--- a/css/site.css
+++ b/css/site.css
@@ -74,11 +74,13 @@ header {
 }
 
 header h1{
-	float: left;
 	margin: 0 10px 0 0;
 	text-transform: uppercase;
+	color: #008fd5;
 }
-
+header h1 a {
+	color: #008fd5;
+}
 header p{
 	color:#aaa;
 	margin:.618em 0 0 -4em;
@@ -226,7 +228,15 @@ li.album p.genre{
 li.album.ANY p.avail{
 	color:#ccc;
 }
-
+.single-album-cover {
+	float: left;
+	margin: 0 2em 2em 0;
+}
+.clearfix:after{
+	content:"";
+	display:table;
+	clear:both;
+}
 @media screen and (max-width: 800px) {
 	ol.albums li.album {
 		margin-right: 1%;
